Auth + LLM, still have to tackle other modalities' generation output type hinting

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -18,13 +18,45 @@
     "import os\n",
     "\n",
     "# Add the project directory to the Python path\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\")) \n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "if project_root not in sys.path:\n",
     "    sys.path.append(project_root)\n",
     "\n",
     "from multivec.data.load.pdf import PDFLoader\n",
+    "\n",
     "pdf = PDFLoader(\"Certificate-307913.pdf\", path_to_output_imgs=\".\").extract_images()\n",
     "print(\"PDFLoader imported successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I can tell that you're feeling upset. If you're willing, could you tell me what's going on and how I can help? I'm here to listen and provide support.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "# Add the project directory to the Python path\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "\n",
+    "from multivec.llm.groq import ChatGroq\n",
+    "\n",
+    "llm = ChatGroq(model_name=\"llama-3.2-3b-preview\", api_key=os.environ.get(\"GROQ_API_KEY\"))\n",
+    "\n",
+    "llm.generate(\"fuck you\")\n"
    ]
   }
  ],
