--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -52,11 +52,11 @@
     "if project_root not in sys.path:\n",
     "    sys.path.append(project_root)\n",
     "\n",
-    "from multivec.llm.groq import ChatGroq\n",
+    "from multivec.providers.groq import ChatGroq\n",
     "\n",
     "llm = ChatGroq(model_name=\"llama-3.2-3b-preview\", api_key=os.environ.get(\"GROQ_API_KEY\"))\n",
     "\n",
-    "llm.generate(\"fuck you\")\n"
+    "llm.generate(\"hi\")\n"
    ]
   }
  ],
