Improved VectorDB Classes

--- a/notebooks/exploring.ipynb
+++ b/notebooks/exploring.ipynb
@@ -50,6 +50,7 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "\n",
     "# Add the project directory to the Python path\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "if project_root not in sys.path:\n",
@@ -57,9 +58,11 @@
     "\n",
     "from multivec.providers.groq import ChatGroq\n",
     "\n",
-    "llm = ChatGroq(model_name=\"llama-3.2-3b-preview\", api_key=os.environ.get(\"GROQ_API_KEY\"))\n",
+    "llm = ChatGroq(\n",
+    "    model_name=\"llama-3.2-3b-preview\", api_key=os.environ.get(\"GROQ_API_KEY\")\n",
+    ")\n",
     "\n",
-    "llm.generate(\"hi\")\n"
+    "llm.generate(\"hi\")"
    ]
   }
  ],
